--- a/newwebsite/music.html
+++ b/newwebsite/music.html
@@ -44,9 +44,9 @@
             <iframe width="100%" height="100%" scrolling="no" frameborder="no" allow="autoplay" src="https://w.soundcloud.com/player/?url=https%3A//api.soundcloud.com/playlists/420064073&amp;color=%23ff5500&amp;auto_play=false&amp;hide_related=false&amp;show_comments=true&amp;show_user=true&amp;show_reposts=false&amp;show_teaser=true&amp;visual=true"></iframe>
         </div>
         
-        <!--ALBUM-->
+        <!--About me-->
         <div class="image-text-left-right">
-            <img src="https://i.imgur.com/7PZ1xsm.jpg" height="250px" width="300px">
+            <img src="images/music1.png" height=300px" width="250px">
                 <p>Signed Keyla Jones is an original singer-songwriter known for her Spanish sound, powerful vocals, and beautiful lyrics that take you on a journey through tragic tales and inspiring love songs. Her music is inspired by real stories from her life and those of her loved ones. Her music has been compared to Marsoon 5, Colbie Caillat, and Norah Jones.
 Keyla is a self-taught guitarist/ukuleleist and has been writing original songs since the age of three. She has notably preformed at Arizona State Fair, Mesa Music Festival, Making a Difference Benefit Concert, and made the top four in the Rising Star of Tacoma contest.</p>
         </div>
