--- a/newwebsite/butterbee.html
+++ b/newwebsite/butterbee.html
@@ -40,8 +40,8 @@
         <h1 style="text-align: center;">Butterbee</h1>
         <div class="image-text-left-right">
             <img src="images/bbhello.png" width="300px" height="257px">
-            <p>BUTTERBEE: hi Salami ham hock sausage flank alcatra meatball ham drumstick picanha strip steak buffalo porchetta. Ribeye short ribs turkey, pig cupim salami leberkas corned beef pork belly venison shoulder. Pork shank short ribs, buffalo jerky
-                meatball spare ribs. Venison swine short.</p>
+            <h3>What is a Butterbee?<h3>
+              <p>Butterbee is an original animated series by Keyla Jones & Picture Purrfect Studios. The story follows a green little creature called, Butterbee, who tends to cause a lot of trouble, due to his childish and stubborn attitude. Alan, his guardian fairy, spends most of his time trying to get Butterbee out of trouble though it's not easy. Throughout the series, the two have wacky adventures, meet a variety of interesting creatures, and even sometimes break into song...for no reason.</p>
         </div>
         <div class="hr"></div>
 
