--- a/newwebsite/butterbee.html
+++ b/newwebsite/butterbee.html
@@ -54,9 +54,9 @@
 
         <!---three boxes-->
         <div style="display: flex; justify-content: space-between;">
-            <a href="#" style="display: block"><img src="https://i.imgur.com/7PZ1xsm.jpg" height="250px" width="250px"></a>
-            <a href="#" style="display: block"><img src="https://i.imgur.com/7PZ1xsm.jpg" height="250px" width="250px"></a>
-            <a href="#" style="display: block"><img src="https://i.imgur.com/7PZ1xsm.jpg" height="250px" width="250px"></a>
+            <a href="#" style="display: block"><img src="images/bbcs.png" height="260px" width="210px"></a>
+            <a href="#" style="display: block"><img src="images/onyoncs.png" height="260px" width="210px"></a>
+            <a href="#" style="display: block"><img src="images/goigoics" height="260px" width="210px"></a>
         </div>
         <div class="hr"></div>
 
