--- a/newwebsite/oops/index.html
+++ b/newwebsite/oops/index.html
@@ -44,7 +44,7 @@
         <div class="hr"></div>
 
         <!--Butterbeeline-->
-        <div class="image-text-left-right">
+        <div class="flexbox">
             <a href="butterbee.html"><img src="images/ButterbeeHello.png" width="300px" height="250px"></a>
             <p>Butterbee is an original animated series by Keyla Jones & Picture Purrfect Studios. The story follows a green little creature called, Butterbee, who tends to cause a lot of trouble, due to his childish and stubborn attitude. Alan, his guardian fairy, spends most of his time trying to get Butterbee out of trouble though it's not easy. Throughout the series, the two have wacky adventures, meet a variety of interesting creatures, and even sometimes break into song...for no reason. <a href="butterbee.html">Want to hear more? Click here!</a>
         </div>
